# datapulse

./: .gitignore  LICENSE  README.md  adidas_quality.yaml  datapulse.yaml  pyproject.toml  user_data.csv  user_data_v2.csv
notebooks/: DataPulse_Proof_of_Concept.ipynb
src/datapulse/: __init__.py  cli.py
src/datapulse/alerts/: __init__.py  base.py
src/datapulse/connectors/: __init__.py  base.py  csv_connector.py  sql.py
src/datapulse/core/: __init__.py  adversarial.py  config.py  detector.py  history.py  profiler.py  validator.py
src/datapulse/reports/: __init__.py  html.py  pdf.py
tests/: test_core.py  test_detector.py  test_profiler.py  test_validator.py
