[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datapulse"
version = "0.1.0"
description = "Automated data quality monitoring for modern data teams"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Deeven Seru", email = "deevenseru11@gmail.com"}
]
keywords = ["data-quality", "monitoring", "data-science", "profiling", "validation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.5.0",
    "numpy>=1.21.0",
    "scipy>=1.9.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
sql = [
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
]
spark = [
    "pyspark>=3.4.0",
]
alerts = [
    "slack-sdk>=3.20.0",
    "requests>=2.28.0",
]
all = [
    "datapulse[dev,sql,spark,alerts]",
]

[project.scripts]
datapulse = "datapulse.cli:app"

[project.urls]
Homepage = "https://github.com/DEVELOPER-DEEVEN/datapulse"
Documentation = "https://github.com/DEVELOPER-DEEVEN/datapulse#readme"
Repository = "https://github.com/DEVELOPER-DEEVEN/datapulse"
Issues = "https://github.com/DEVELOPER-DEEVEN/datapulse/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=datapulse --cov-report=term-missing"
